spark/spark-k8s/jupyter-test.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: oaktree-jupyter

spec:
  clusterIP: None
  selector:
    app: oaktree-jupyter
  ports:
  - protocol: TCP
    port: 8888
    targetPort: 8888
