spark/spark-k8s/jupyter-test.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: oaktree-jupyter-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/force-ssl-redirect: "true"
    ingress.kubernetes.io/proxy-body-size: "800m"
    nginx.ingress.kubernetes.io/proxy-body-size: "800m"
    certmanager.k8s.io/issuer: "letsencrypt-prod"

spec:
  tls:
  - hosts:
    - jupyter.example.com
    secretName: oaktree-jupyter-tls
  rules:
  - host: jupyter.centerville.oak-tree.tech
    http:
      paths:
      - path: /
        backend:
          serviceName: oaktree-jupyter 
          servicePort: 8888
